feat: 完成P2系列迭代与多模块优化
- 登录页：开发环境默认填充账号密码，生产环境留空并关闭记住我
- 配置中心：为Feign启用Sentinel熔断，配置超时与日志级别
- 用户账号：新增部门ID、直属上级ID、岗位编码字段
- 发票红冲：修复红冲逻辑，仅红冲指定原发票而非所有发票
- 数据库连接池：优化生产环境连接池配置，避免耗尽PG连接
- 回款核销：添加并发冲突检查与操作日志
- 组织查询Feign：实现按部门、岗位、上级查询用户的接口
- 新增规则变量模块：定义规则变量元数据与管理API
- 新增轻量规则引擎模块：添加QLExpress引擎骨架与自动配置
- 新增工作流事件Outbox扫描器
- 为多个控制器添加操作日志注解
- 新增数据库升级脚本与规则模板市场文档